<resources>
    <string name="app_name">Three In A Row</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Three In A Row</string>
    <string name="new_game">New Game</string>
    <string name="h_s">High Scores</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_game">Game</string>
    <string name="next_color">Next Color:</string>
    <string name="settings_bg">Background Color</string>
    <string name="bg_white">White</string>
    <string name="bg_grey">Grey</string>
    <string name="bg_black">Black</string>
    <string name="settings_col1">First Color</string>
    <string name="col1_green">Green</string>
    <string name="col1_blue">Blue</string>
    <string name="col1_purple">Purple</string>
    <string name="col2_red">Red</string>
    <string name="col2_orange">Orange</string>
    <string name="col2_yellow">Yellow</string>
    <string name="settings_col2">Second Color</string>
    <string name="settings_size">Grid Size</string>
    <string name="settings_difficulty">Difficulty</string>
    <string name="settings_4">4x4</string>
    <string name="settings_notime">No Timer</string>
    <string name="settings_btn">Save Settings</string>
    <string name="title_activity_scores">High Scores</string>
    <string name="title_activity_help">Help</string>
    <string name="menu_activity_main">Main Menu</string>
    <string name="menu_activity_hs">High Scores</string>
    <string name="menu_activity_settings">Settings</string>
    <string name="menu_activity_help">Help</string>
    <string name="how_to_play">To play the game: 4 squares in the grid will be already filled in when the game starts. You must tap a square during each turn to change it to the color displayed in \'Next Color.\'</string>
    <string name="how_to_play2">You must change every color in the grid without getting 3 in a row to win the game. If you get 3 in a row of either color in the grid, you lose. Click \'New Game\' to try again.</string>
    <string name="how_to_change_settings">To change settings: From the main menu, select the \'Settings\' button. On the Settings page, you can select 2 different colors to be the game colors and a background color. You can also select the difficulty of the game or the grid size.</string>
    <string name="start_new_game">New Game</string>
</resources>
