<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HelpActivity"
    tools:showIn="@layout/activity_help">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="497dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/help"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/how_to_play"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="280dp"
                android:layout_height="74dp"
                app:srcCompat="@drawable/nextcolor"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="442dp"
                android:background="#000000"
                android:padding="1dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/how_to_play2"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="280dp"
                android:layout_height="332dp"
                app:srcCompat="@drawable/gameover"
                android:background="#000000"
                android:padding="1dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/how_to_change_settings"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.922" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="280dp"
                android:layout_height="338dp"
                app:srcCompat="@drawable/settings"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="504dp"
                android:background="#000000"
                android:padding="1dp"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>